# travel-agent

./: .gitignore  README.md
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_enable_pgvector.py  0002_conversations.py  0003_memory.py  0004_oauth_and_trips.py  0005_plans.py
backend/app/: config.py  db.py  main.py
backend/app/agent/: llm.py  loop.py  system_prompt.py
backend/app/agent/tools/: __init__.py  calendar.py  flights.py  gmail.py  hotels.py  maps.py  memory.py  places.py  plans.py  preferences.py  weather.py
backend/app/integrations/: duffel.py  gmail_client.py  google_calendar.py  google_oauth.py  google_places.py  google_routes.py  liteapi.py
backend/app/memory/: __init__.py  embedder.py  extractor.py  store.py
backend/app/models/: __init__.py  conversation.py  memory.py  oauth.py  plan.py  preference.py  trip.py
backend/app/routes/: auth.py  chat.py  conversations.py  plans.py  preferences.py  trips.py
backend/app/schemas/: chat.py  plans.py  preferences.py  trips.py
backend/app/security/: __init__.py  crypto.py
backend/app/workers/: __init__.py  email_parser.py  queue.py  tasks.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/: CalendarCards.tsx  DirectionsCard.tsx  FlightOffersCard.tsx  HotelOffersCard.tsx  LivePlanPanel.tsx  MessageInput.tsx  MessageList.tsx  NavRail.tsx  PlacesCard.tsx  PlanCard.tsx  PlanMap.tsx  Sidebar.tsx
infra/: .env.example  Caddyfile  docker-compose.yml
(+21 files in other folders)
